1.1.2
  12-02-23
  Bugfix
  * #00000: SQL error in the query in context with development tools
            Thanks to Borries Jensen, who send the Bugfix.

1.1.1
  12-02-10
  New Feature
  * #33851: SEO rel="nofollow"
  Improvements
  * #00000: pi1/flexform_locallang.xml

1.1.0
  12-02-02
  SECURITY FIX

1.0.1
  11-12-13
  Improvements
  * #32516: Systemcheck should check fonts in directory of pdfcontroller_fonts
  * #32513: typeNum print template is configurable by the TypoScript constant editor
  * #32482: PDF Controller suggests to install Fonts

  Bugfixes
  * #32518: Wrong field name for proxy in the flexform. Thanks to Borries Jensen
  * #31191: Missing folders temp and out. Thanks to Borries Jensen
  * #31190: Parameter are missing - without RealURL only. Thanks to Borries Jensen

1.0.0
  11-09-19
  Publishing
  * Manual is finished
  * Status: alpha > beta

0.9.2
  11-07-24
  Development
  * Integration of all html2ps features into the flexform
  * Programming the plugin

0.0.2
  11-07-23
  Development
  * Creating the flexform

0.0.1
  11-07-22
  Initial release
  Dirk Wildt  http://wildt.at.die-netzmacher.de